Attempt to fix MacOS

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>webcam-capture</artifactId>
             <version>0.3.12</version>
         </dependency>
+        <!-- JavaCV for webcam on macOS (x86_64 and aarch64); sarxos often fails there -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.10</version>
+        </dependency>
     </dependencies>
 
     <build>
